--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -436,6 +436,359 @@
     "#print(dir(content))\n",
     "print(content.read())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0dea8bb-5e78-4aaa-90eb-4ea7136c7bdb",
+   "metadata": {},
+   "source": [
+    "## Updating the text viewer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2717cc30-63ca-4ed0-a07b-2a1c936712a3",
+   "metadata": {},
+   "source": [
+    "### Watchdog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "af4c2167-3694-4f8d-8385-87644b4a70d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Size in Bytes is 9\n",
+      "File Size in Bytes is 23File Size in Bytes is 23\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 23\n",
+      "\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 37\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 37\n",
+      "File Size in Bytes is 37\n",
+      "File Size in Bytes is 37\n",
+      "File Size in Bytes is 37\n",
+      "File Size in Bytes is 37\n",
+      "File Size in Bytes is 37\n",
+      "File Size in Bytes is 37\n",
+      "File Size in Bytes is 43\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 43\n",
+      "File Size in Bytes is 43\n",
+      "File Size in Bytes is 43\n",
+      "File Size in Bytes is 49File Size in Bytes is 49\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 49\n",
+      "File Size in Bytes is 49\n",
+      "\n",
+      "File Size in Bytes is 55\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 55\n",
+      "File Size in Bytes is 55\n",
+      "File Size in Bytes is 55\n",
+      "File Size in Bytes is 61\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 61\n",
+      "File Size in Bytes is 61\n",
+      "File Size in Bytes is 61\n",
+      "File Size in Bytes is 70\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 70\n",
+      "File Size in Bytes is 70\n",
+      "File Size in Bytes is 70\n",
+      "File Size in Bytes is 76\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 76\n",
+      "File Size in Bytes is 76\n",
+      "File Size in Bytes is 76\n",
+      "File Size in Bytes is 83\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 83\n",
+      "File Size in Bytes is 83\n",
+      "File Size in Bytes is 83\n",
+      "File Size in Bytes is 88\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 88\n",
+      "File Size in Bytes is 88\n",
+      "File Size in Bytes is 88\n",
+      "File Size in Bytes is 97\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 97\n",
+      "File Size in Bytes is 97\n",
+      "File Size in Bytes is 97\n",
+      "File Size in Bytes is 108\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 108\n",
+      "File Size in Bytes is 108\n",
+      "File Size in Bytes is 108\n",
+      "File Size in Bytes is 112\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 112\n",
+      "File Size in Bytes is 112\n",
+      "File Size in Bytes is 112\n",
+      "File Size in Bytes is 121\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 121\n",
+      "File Size in Bytes is 121\n",
+      "File Size in Bytes is 121\n",
+      "File Size in Bytes is 128\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 128\n",
+      "File Size in Bytes is 128\n",
+      "File Size in Bytes is 128\n",
+      "File Size in Bytes is 137\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 137\n",
+      "File Size in Bytes is 137\n",
+      "File Size in Bytes is 137\n",
+      "File Size in Bytes is 145\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 145\n",
+      "File Size in Bytes is 145\n",
+      "File Size in Bytes is 145\n",
+      "File Size in Bytes is 151\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 151\n",
+      "File Size in Bytes is 151\n",
+      "File Size in Bytes is 151\n",
+      "File Size in Bytes is 0\n",
+      "File Size in Bytes is 0\n",
+      "File Size in Bytes is 0\n",
+      "File Size in Bytes is 0\n",
+      "File Size in Bytes is 0\n",
+      "File Size in Bytes is 0\n",
+      "File Size in Bytes is 0\n",
+      "File Size in Bytes is 0\n",
+      "File Size in Bytes is 7File Size in Bytes is 7\n",
+      "File Size in Bytes is 7\n",
+      "\n",
+      "File Size in Bytes is 7\n",
+      "File Size in Bytes is 15\n",
+      "File Size in Bytes is 15\n",
+      "File Size in Bytes is 15\n",
+      "File Size in Bytes is 15\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 23\n",
+      "File Size in Bytes is 29\n",
+      "File Size in Bytes is 29\n",
+      "File Size in Bytes is 29\n",
+      "File Size in Bytes is 29\n",
+      "File Size in Bytes is 35\n",
+      "File Size in Bytes is 35\n",
+      "File Size in Bytes is 35\n",
+      "File Size in Bytes is 35\n",
+      "File Size in Bytes is 41\n",
+      "File Size in Bytes is 41\n",
+      "File Size in Bytes is 41\n",
+      "File Size in Bytes is 41\n",
+      "File Size in Bytes is 52\n",
+      "File Size in Bytes is 52\n",
+      "File Size in Bytes is 52\n",
+      "File Size in Bytes is 52\n",
+      "File Size in Bytes is 69\n",
+      "File Size in Bytes is 69\n",
+      "File Size in Bytes is 69\n",
+      "File Size in Bytes is 69\n",
+      "File Size in Bytes is 83\n",
+      "File Size in Bytes is 83\n",
+      "File Size in Bytes is 83\n",
+      "File Size in Bytes is 83\n",
+      "File Size in Bytes is 93\n",
+      "File Size in Bytes is 93\n",
+      "File Size in Bytes is 93\n",
+      "File Size in Bytes is 93\n",
+      "File Size in Bytes is 100\n",
+      "File Size in Bytes is 100\n",
+      "File Size in Bytes is 100\n",
+      "File Size in Bytes is 100\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 104\n",
+      "File Size in Bytes is 118\n",
+      "File Size in Bytes is 118\n",
+      "File Size in Bytes is 118\n",
+      "File Size in Bytes is 118\n",
+      "File Size in Bytes is 118\n",
+      "File Size in Bytes is 118\n",
+      "File Size in Bytes is 118\n",
+      "File Size in Bytes is 118\n",
+      "File Size in Bytes is 129\n",
+      "File Size in Bytes is 129\n",
+      "File Size in Bytes is 129\n",
+      "File Size in Bytes is 129\n",
+      "File Size in Bytes is 144\n",
+      "File Size in Bytes is 144\n",
+      "File Size in Bytes is 144\n",
+      "File Size in Bytes is 144\n",
+      "File Size in Bytes is 151File Size in Bytes is 151\n",
+      "\n",
+      "File Size in Bytes is 151\n",
+      "File Size in Bytes is 151\n",
+      "File Size in Bytes is 154\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 154\n",
+      "File Size in Bytes is 154\n",
+      "File Size in Bytes is 154\n",
+      "File Size in Bytes is 157\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 157\n",
+      "File Size in Bytes is 157\n",
+      "File Size in Bytes is 157\n",
+      "File Size in Bytes is 160\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 160\n",
+      "File Size in Bytes is 160\n",
+      "File Size in Bytes is 160\n",
+      "File Size in Bytes is 164\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 164\n",
+      "File Size in Bytes is 164\n",
+      "File Size in Bytes is 164\n",
+      "File Size in Bytes is 166\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 166\n",
+      "File Size in Bytes is 166\n",
+      "File Size in Bytes is 166\n",
+      "File Size in Bytes is 168\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 168\n",
+      "File Size in Bytes is 168\n",
+      "File Size in Bytes is 168\n",
+      "File Size in Bytes is 170\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 170\n",
+      "File Size in Bytes is 170\n",
+      "File Size in Bytes is 170\n",
+      "File Size in Bytes is 175\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 175\n",
+      "File Size in Bytes is 175\n",
+      "File Size in Bytes is 175\n",
+      "File Size in Bytes is 181\n",
+      "Estas dentro del IF\n",
+      "File Size in Bytes is 181\n",
+      "File Size in Bytes is 181\n",
+      "File Size in Bytes is 181\n"
+     ]
+    }
+   ],
+   "source": [
+    "from watchdog.observers import Observer\n",
+    "from watchdog.events import FileSystemEventHandler\n",
+    "import os\n",
+    "\n",
+    "global current_size\n",
+    "\n",
+    "file_name=\"X:\\\\test_messaging\\\\logs_messages.txt\"\n",
+    "file_stats = os.stat(file_name)\n",
+    "current_size=file_stats.st_size #/ (1024 * 1024)\n",
+    "print(f'File Size in Bytes is {current_size}')\n",
+    "\n",
+    "\n",
+    "class MyEventHandler(FileSystemEventHandler):\n",
+    "    def on_modified(self, event):\n",
+    "        global current_size\n",
+    "        file_name_modified=\"X:/test_messaging/logs_messages.txt\"\n",
+    "        file_stats_wd = os.stat(file_name_modified)\n",
+    "        new_size= file_stats_wd.st_size\n",
+    "        print(f'File Size in Bytes is {new_size}')\n",
+    "        if file_name_modified:\n",
+    "            if new_size > current_size:\n",
+    "                print(\"Estas dentro del IF\")\n",
+    "                #shutil.copy(\"C:/Users/Joel/Documents/Test/monitored_directory/test_wd.txt\", \"C:/Users/Joel/Documents/Test/copied_files/\")\n",
+    "                current_size=new_size\n",
+    "\n",
+    "observer = Observer()\n",
+    "observer.schedule(MyEventHandler(), \"X:/test_messaging/\", recursive=False) #Directorio monitoreado\n",
+    "observer.start()\n",
+    "\n",
+    "try:\n",
+    "    while True:\n",
+    "            # Set the thread sleep time\n",
+    "            time.sleep(1)\n",
+    "except KeyboardInterrupt:\n",
+    "    observer.stop()\n",
+    "    observer.join()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "dabfd77c-540e-40fc-bacb-08b71122570a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import time\n",
+    "import logging\n",
+    "from watchdog.observers import Observer\n",
+    "from watchdog.events import LoggingEventHandler\n",
+    " \n",
+    "if __name__ == \"__main__\":\n",
+    "    # Set the format for logging info\n",
+    "    logging.basicConfig(level=logging.INFO,\n",
+    "                        format='%(asctime)s - %(message)s',\n",
+    "                        datefmt='%Y-%m-%d %H:%M:%S')\n",
+    " \n",
+    "    # Set format for displaying path\n",
+    "path = sys.argv[1] if len(sys.argv) > 1 else '.'\n",
+    " \n",
+    "    # Initialize logging event handler\n",
+    "event_handler = LoggingEventHandler()\n",
+    " \n",
+    "    # Initialize Observer\n",
+    "observer = Observer()\n",
+    "observer.schedule(event_handler, \"X:/test_messaging/\", recursive=True)\n",
+    " \n",
+    "    # Start the observer\n",
+    "observer.start()\n",
+    "try:\n",
+    "    while True:\n",
+    "            # Set the thread sleep time\n",
+    "            time.sleep(1)\n",
+    "except KeyboardInterrupt:\n",
+    "    observer.stop()\n",
+    "    observer.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d48423a-ee83-4b96-8a2d-584358a77e7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
