I tested a part of code to be added to the script in py for tracking the log_messages.txt file

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -18,21 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "affd4fca-527d-4d3e-bb40-84c9eb8abeb2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
@@ -57,21 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "aae8efa2-5492-46f8-bc6a-645ee32a6064",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
@@ -88,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "446dccc8-ea0a-48b0-86e9-1393ef0d675e",
    "metadata": {},
    "outputs": [],
@@ -129,18 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "168f334d-cfd8-40db-8546-416a5a42339d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "como estas?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "message= \"como estas?\"\n",
     "message_sent= message+\"\\n\"\n",
@@ -161,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ce088206-1dcb-4e97-89d3-54c7f0082f7b",
    "metadata": {},
    "outputs": [],
@@ -171,18 +141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "5a314aa9-f772-477f-8035-23de9028cc86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mensaje\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import *\n",
@@ -258,18 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "cb6a5205-3ca6-4bbf-90c6-f5efbd38e758",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32521352\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import *\n",
@@ -350,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "598d6a5b-e76e-4c11-a3a9-ff853b7b6fcb",
    "metadata": {},
    "outputs": [],
@@ -386,21 +340,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "921c20d4-49fe-48de-a424-02d36c32482d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.system(\"notepad.exe logs_messages.txt\")"
@@ -408,27 +351,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3fbe32ba-b197-4f5e-bb34-5e9be9aaab0a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hola\n",
-      "como estas?\n",
-      "como estas?\n",
-      "test de getting and append text\n",
-      "webos\n",
-      "test of erase\n",
-      "mi mensaje\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_path= \"C:\\\\Users\\\\Joel\\\\Documents\\\\Python\\\\messaging_hosts\\\\logs_messages.txt\"\n",
     "\n",
@@ -455,254 +383,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "af4c2167-3694-4f8d-8385-87644b4a70d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File Size in Bytes is 9\n",
-      "File Size in Bytes is 23File Size in Bytes is 23\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 23\n",
-      "\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 37\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 37\n",
-      "File Size in Bytes is 37\n",
-      "File Size in Bytes is 37\n",
-      "File Size in Bytes is 37\n",
-      "File Size in Bytes is 37\n",
-      "File Size in Bytes is 37\n",
-      "File Size in Bytes is 37\n",
-      "File Size in Bytes is 43\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 43\n",
-      "File Size in Bytes is 43\n",
-      "File Size in Bytes is 43\n",
-      "File Size in Bytes is 49File Size in Bytes is 49\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 49\n",
-      "File Size in Bytes is 49\n",
-      "\n",
-      "File Size in Bytes is 55\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 55\n",
-      "File Size in Bytes is 55\n",
-      "File Size in Bytes is 55\n",
-      "File Size in Bytes is 61\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 61\n",
-      "File Size in Bytes is 61\n",
-      "File Size in Bytes is 61\n",
-      "File Size in Bytes is 70\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 70\n",
-      "File Size in Bytes is 70\n",
-      "File Size in Bytes is 70\n",
-      "File Size in Bytes is 76\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 76\n",
-      "File Size in Bytes is 76\n",
-      "File Size in Bytes is 76\n",
-      "File Size in Bytes is 83\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 83\n",
-      "File Size in Bytes is 83\n",
-      "File Size in Bytes is 83\n",
-      "File Size in Bytes is 88\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 88\n",
-      "File Size in Bytes is 88\n",
-      "File Size in Bytes is 88\n",
-      "File Size in Bytes is 97\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 97\n",
-      "File Size in Bytes is 97\n",
-      "File Size in Bytes is 97\n",
-      "File Size in Bytes is 108\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 108\n",
-      "File Size in Bytes is 108\n",
-      "File Size in Bytes is 108\n",
-      "File Size in Bytes is 112\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 112\n",
-      "File Size in Bytes is 112\n",
-      "File Size in Bytes is 112\n",
-      "File Size in Bytes is 121\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 121\n",
-      "File Size in Bytes is 121\n",
-      "File Size in Bytes is 121\n",
-      "File Size in Bytes is 128\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 128\n",
-      "File Size in Bytes is 128\n",
-      "File Size in Bytes is 128\n",
-      "File Size in Bytes is 137\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 137\n",
-      "File Size in Bytes is 137\n",
-      "File Size in Bytes is 137\n",
-      "File Size in Bytes is 145\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 145\n",
-      "File Size in Bytes is 145\n",
-      "File Size in Bytes is 145\n",
-      "File Size in Bytes is 151\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 151\n",
-      "File Size in Bytes is 151\n",
-      "File Size in Bytes is 151\n",
-      "File Size in Bytes is 0\n",
-      "File Size in Bytes is 0\n",
-      "File Size in Bytes is 0\n",
-      "File Size in Bytes is 0\n",
-      "File Size in Bytes is 0\n",
-      "File Size in Bytes is 0\n",
-      "File Size in Bytes is 0\n",
-      "File Size in Bytes is 0\n",
-      "File Size in Bytes is 7File Size in Bytes is 7\n",
-      "File Size in Bytes is 7\n",
-      "\n",
-      "File Size in Bytes is 7\n",
-      "File Size in Bytes is 15\n",
-      "File Size in Bytes is 15\n",
-      "File Size in Bytes is 15\n",
-      "File Size in Bytes is 15\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 23\n",
-      "File Size in Bytes is 29\n",
-      "File Size in Bytes is 29\n",
-      "File Size in Bytes is 29\n",
-      "File Size in Bytes is 29\n",
-      "File Size in Bytes is 35\n",
-      "File Size in Bytes is 35\n",
-      "File Size in Bytes is 35\n",
-      "File Size in Bytes is 35\n",
-      "File Size in Bytes is 41\n",
-      "File Size in Bytes is 41\n",
-      "File Size in Bytes is 41\n",
-      "File Size in Bytes is 41\n",
-      "File Size in Bytes is 52\n",
-      "File Size in Bytes is 52\n",
-      "File Size in Bytes is 52\n",
-      "File Size in Bytes is 52\n",
-      "File Size in Bytes is 69\n",
-      "File Size in Bytes is 69\n",
-      "File Size in Bytes is 69\n",
-      "File Size in Bytes is 69\n",
-      "File Size in Bytes is 83\n",
-      "File Size in Bytes is 83\n",
-      "File Size in Bytes is 83\n",
-      "File Size in Bytes is 83\n",
-      "File Size in Bytes is 93\n",
-      "File Size in Bytes is 93\n",
-      "File Size in Bytes is 93\n",
-      "File Size in Bytes is 93\n",
-      "File Size in Bytes is 100\n",
-      "File Size in Bytes is 100\n",
-      "File Size in Bytes is 100\n",
-      "File Size in Bytes is 100\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 104\n",
-      "File Size in Bytes is 118\n",
-      "File Size in Bytes is 118\n",
-      "File Size in Bytes is 118\n",
-      "File Size in Bytes is 118\n",
-      "File Size in Bytes is 118\n",
-      "File Size in Bytes is 118\n",
-      "File Size in Bytes is 118\n",
-      "File Size in Bytes is 118\n",
-      "File Size in Bytes is 129\n",
-      "File Size in Bytes is 129\n",
-      "File Size in Bytes is 129\n",
-      "File Size in Bytes is 129\n",
-      "File Size in Bytes is 144\n",
-      "File Size in Bytes is 144\n",
-      "File Size in Bytes is 144\n",
-      "File Size in Bytes is 144\n",
-      "File Size in Bytes is 151File Size in Bytes is 151\n",
-      "\n",
-      "File Size in Bytes is 151\n",
-      "File Size in Bytes is 151\n",
-      "File Size in Bytes is 154\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 154\n",
-      "File Size in Bytes is 154\n",
-      "File Size in Bytes is 154\n",
-      "File Size in Bytes is 157\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 157\n",
-      "File Size in Bytes is 157\n",
-      "File Size in Bytes is 157\n",
-      "File Size in Bytes is 160\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 160\n",
-      "File Size in Bytes is 160\n",
-      "File Size in Bytes is 160\n",
-      "File Size in Bytes is 164\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 164\n",
-      "File Size in Bytes is 164\n",
-      "File Size in Bytes is 164\n",
-      "File Size in Bytes is 166\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 166\n",
-      "File Size in Bytes is 166\n",
-      "File Size in Bytes is 166\n",
-      "File Size in Bytes is 168\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 168\n",
-      "File Size in Bytes is 168\n",
-      "File Size in Bytes is 168\n",
-      "File Size in Bytes is 170\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 170\n",
-      "File Size in Bytes is 170\n",
-      "File Size in Bytes is 170\n",
-      "File Size in Bytes is 175\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 175\n",
-      "File Size in Bytes is 175\n",
-      "File Size in Bytes is 175\n",
-      "File Size in Bytes is 181\n",
-      "Estas dentro del IF\n",
-      "File Size in Bytes is 181\n",
-      "File Size in Bytes is 181\n",
-      "File Size in Bytes is 181\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from watchdog.observers import Observer\n",
     "from watchdog.events import FileSystemEventHandler\n",
@@ -744,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "dabfd77c-540e-40fc-bacb-08b71122570a",
    "metadata": {},
    "outputs": [],
@@ -783,9 +467,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6f9360b-8d33-422b-a742-99aee415460d",
+   "metadata": {},
+   "source": [
+    "## While"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "31d64bb6-a8f1-460e-b674-1b4a44ae913c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El tamaño del archivo es: 18\n",
+      "Estas dentro del IF\n",
+      "Estas dentro del IF\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 35\u001b[0m\n\u001b[0;32m     31\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEstas dentro del IF\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     32\u001b[0m             current_size\u001b[38;5;241m=\u001b[39mnew_size\n\u001b[1;32m---> 35\u001b[0m tracking()\n",
+      "Cell \u001b[1;32mIn[1], line 24\u001b[0m, in \u001b[0;36mtracking\u001b[1;34m()\u001b[0m\n\u001b[0;32m     21\u001b[0m state \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m state \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m---> 24\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     25\u001b[0m     file_name_modified\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/Joel/Documents/Python/messaging_hosts/logs_messages.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     26\u001b[0m     file_stats \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mstat(file_name_modified)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "import shutil\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "from tkinter import *\n",
+    "from tkinter import messagebox\n",
+    "from pathlib import Path\n",
+    "\n",
+    "global current_size\n",
+    "\n",
+    "file_name=\"C:/Users/Joel/Documents/Python/messaging_hosts/logs_messages.txt\"\n",
+    "file_stats = os.stat(file_name)\n",
+    "current_size=file_stats.st_size #/ (1024 * 1024)\n",
+    "print(f'El tamaño del archivo es: {current_size}')\n",
+    "        \n",
+    "\n",
+    "def tracking():\n",
+    "    global current_size\n",
+    "    \n",
+    "    state = True\n",
+    "    \n",
+    "    while state == True:\n",
+    "        time.sleep(1)\n",
+    "        file_name_modified=\"C:/Users/Joel/Documents/Python/messaging_hosts/logs_messages.txt\"\n",
+    "        file_stats = os.stat(file_name_modified)\n",
+    "        new_size= file_stats.st_size\n",
+    "        #print(f'El tamaño es: {new_size}')\n",
+    "    #if filename:    \n",
+    "        if new_size > current_size:\n",
+    "            print(\"Estas dentro del IF\")\n",
+    "            current_size=new_size\n",
+    "            \n",
+    "            \n",
+    "tracking()        \n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d48423a-ee83-4b96-8a2d-584358a77e7b",
+   "id": "aac625da-24f3-4f00-ba78-9aacdc884103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_window=Tk()\n",
+    "main_window.title(\"MONITOREANDO...\")\n",
+    "main_window.geometry(\"275x45\")\n",
+    "text=Label(main_window, text=\"Monitoreando archivo PropMap\")\n",
+    "text.pack()\n",
+    "text2=Label(main_window, text=\"NO CERRAR ESTA VENTANA\", fg=\"#D40104\")\n",
+    "text2.pack()\n",
+    "main_window.mainloop()\n",
+    "\n",
+    "title=\"¡¡¡ERROR!!!\"\n",
+    "info=\"EL SCRIPT HA DEJADO DE MONITOREAR EL DIRECTORIO \\nNotificar a Sistemas\"\n",
+    "\n",
+    "\n",
+    "while observer.is_alive() and main_window in locals():\n",
+    "    observer.join(1)\n",
+    "observer.stop()\n",
+    "observer.join()\n",
+    "messagebox.showerror(title, info)\n",
+    "\n",
+    "\n",
+    "state=True\n",
+    "\n",
+    "#new_size= int(input(\"Dame un valor\"))\n",
+    "#print(type(new_size))\n",
+    "#current_size=10\n",
+    "    \n",
+    "\n",
+    "        #state=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af2a92a8-d479-4d12-8d09-c916fa7a47db",
    "metadata": {},
    "outputs": [],
    "source": []
